--- a/rdpwrap.ini
+++ b/rdpwrap.ini
@@ -4988,6 +4988,38 @@ bMultimonAllowed.x86  =CD7B0
 ulMaxDebugSessions.x86=CD7B4
 bFUSEnabled.x86       =CD7B8
 
+[10.0.17763.437-SLInit]
+bInitialized.x86 =CD798
+bServerSku.x86 =CD79C
+lMaxUserSessions.x86 =CD7A0
+bAppServerAllowed.x86 =CD7A8
+bRemoteConnAllowed.x86=CD7AC
+bMultimonAllowed.x86 =CD7B0
+ulMaxDebugSessions.x86=CD7B4
+bFUSEnabled.x86 =CD7B8
+bInitialized.x64 =ECAB0
+bServerSku.x64 =ECAB4
+lMaxUserSessions.x64 =ECAB8
+bAppServerAllowed.x64 =ECAC0
+bRemoteConnAllowed.x64=ECAC4
+bMultimonAllowed.x64 =ECAC8
+ulMaxDebugSessions.x64=ECACC
+bFUSEnabled.x64 =ECAD0
+
+[10.0.17763.437]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=77A41
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=3E520
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=18025
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1ACDC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 bInitialized.x64      =ECAB0
 bServerSku.x64        =ECAB4
 lMaxUserSessions.x64  =ECAB8
@@ -4997,12 +5029,83 @@ bMultimonAllowed.x64  =ECAC8
 ulMaxDebugSessions.x64=ECACC
 bFUSEnabled.x64       =ECAD0
 
+[10.0.17763.503]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=77A41
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=3E520
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=18025
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1ACDC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+bInitialized.x64      =ECAB0
+bServerSku.x64        =ECAB4
+lMaxUserSessions.x64  =ECAB8
+bAppServerAllowed.x64 =ECAC0
+bRemoteConnAllowed.x64=ECAC4
+bMultimonAllowed.x64  =ECAC8
+ulMaxDebugSessions.x64=ECACC
+bFUSEnabled.x64       =ECAD0
+
+[10.0.18362.30]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=82FB5
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0DCC9
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1FE15
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=22DDC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.18362.53-SLInit]
+bInitialized.x64 =F6A8C
+bServerSku.x64 =F6A90
+lMaxUserSessions.x64 =F6A94
+bAppServerAllowed.x64 =F6A9C
+bRemoteConnAllowed.x64=F6AA0
+bMultimonAllowed.x64 =F6AA4
+ulMaxDebugSessions.x64=F6AA8
+bFUSEnabled.x64 =F6AAC
+
+[10.0.18362.53]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=82FB5
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0DCC9
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1FE15
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=22DDC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.18362.53-SLInit]
+bInitialized.x64 =F6A8C
+bServerSku.x64 =F6A90
+lMaxUserSessions.x64 =F6A94
+bAppServerAllowed.x64 =F6A9C
+bRemoteConnAllowed.x64=F6AA0
+bMultimonAllowed.x64 =F6AA4
+ulMaxDebugSessions.x64=F6AA8
+bFUSEnabled.x64 =F6AAC
+
 [10.0.18362.267]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=82FB5
 LocalOnlyCode.x64=jmpshort
 SingleUserPatch.x64=1
-SingleUserOffset.x64=0DBFC
+SingleUserOffset.x64=0DCC9
 SingleUserCode.x64=Zero
 DefPolicyPatch.x64=1
 DefPolicyOffset.x64=1FE15
@@ -5020,3 +5123,96 @@ bRemoteConnAllowed.x64=F6AA0
 bMultimonAllowed.x64 =F6AA4
 ulMaxDebugSessions.x64=F6AA8
 bFUSEnabled.x64 =F6AAC
+
+[10.0.18362.329]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=82FB5
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0DCC9
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1FE15
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=22DDC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.18362.329-SLInit]
+bInitialized.x64 =F6A8C
+bServerSku.x64 =F6A90
+lMaxUserSessions.x64 =F6A94
+bAppServerAllowed.x64 =F6A9C
+bRemoteConnAllowed.x64=F6AA0
+bMultimonAllowed.x64 =F6AA4
+ulMaxDebugSessions.x64=F6AA8
+bFUSEnabled.x64 =F6AAC
+
+[10.0.18362.657]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=82FB5
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0DCC9
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1FE15
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=22DDC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.18362.657-SLInit]
+bInitialized.x64 =F6A8C
+bServerSku.x64 =F6A90
+lMaxUserSessions.x64 =F6A94
+bAppServerAllowed.x64 =F6A9C
+bRemoteConnAllowed.x64=F6AA0
+bMultimonAllowed.x64 =F6AA4
+ulMaxDebugSessions.x64=F6AA8
+bFUSEnabled.x64 =F6AAC
+
+[10.0.18362.836]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B7D06
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=82FC5
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=50515
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=DBFC
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=50249
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1FE15
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=5A75A
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=22DDC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.18362.836-SLInit]
+bInitialized.x86      =D577C
+bServerSku.x86        =D5780
+lMaxUserSessions.x86  =D5784
+bAppServerAllowed.x86 =D578C
+bRemoteConnAllowed.x86=D5790
+bMultimonAllowed.x86  =D5794
+ulMaxDebugSessions.x86=D5798
+bFUSEnabled.x86       =D579C
+
+bInitialized.x64      =F6A8C
+bServerSku.x64        =F6A90
+lMaxUserSessions.x64  =F6A94
+bAppServerAllowed.x64 =F6A9C
+bRemoteConnAllowed.x64=F6AA0
+bMultimonAllowed.x64  =F6AA4
+ulMaxDebugSessions.x64=F6AA8
+bFUSEnabled.x64       =F6AAC
