--- a/rdpwrap.ini
+++ b/rdpwrap.ini
@@ -1,5 +1,9 @@
+; RDP Wrapper Library configuration
+; Do not modify without special knowledge
+; Edited by sebaxakerhtc
+
 [Main]
-Updated=2021-06-04
+Updated=2021-06-29
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -3963,6 +3967,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=22E9C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.18362.1533]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=83075
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0DD19
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1FE65
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=22E9C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.18963.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=88C91
@@ -4087,6 +4105,20 @@ DefPolicyOffset.x64=18A15
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x64=1
 SLInitOffset.x64=1DFDC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.1081]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=89D81
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0CB26
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=19105
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1E98C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.19613.1000]
@@ -4692,6 +4724,36 @@ SLInitOffset.x64=26AD0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.21390.1]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=98C11
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=088C2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BB75
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=26AD0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+; Windows 11
+
+[10.0.21996.1]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=98C11
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=088C2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BB75
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=26AD0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22000.1]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=98C11
 LocalOnlyCode.x64=jmpshort
@@ -7143,6 +7205,16 @@ bMultimonAllowed.x64  =0F6AA4
 ulMaxDebugSessions.x64=0F6AA8
 bFUSEnabled.x64       =0F6AAC
 
+[10.0.18362.1533-SLInit]
+bInitialized.x64      =F6A8C
+bServerSku.x64        =F6A90
+lMaxUserSessions.x64  =F6A94
+bAppServerAllowed.x64 =F6A9C
+bRemoteConnAllowed.x64=F6AA0
+bMultimonAllowed.x64  =F6AA4
+ulMaxDebugSessions.x64=F6AA8
+bFUSEnabled.x64       =F6AAC
+
 [10.0.18963.1000-SLInit]
 bInitialized.x64      =102DD8
 bServerSku.x64        =102DDC
@@ -7224,6 +7296,16 @@ ulMaxDebugSessions.x64=107128
 bFUSEnabled.x64       =10712C
 
 [10.0.19041.1023-SLInit]
+bInitialized.x64      =107108
+bServerSku.x64        =10710C
+lMaxUserSessions.x64  =107110
+bAppServerAllowed.x64 =107118
+bRemoteConnAllowed.x64=107120
+bMultimonAllowed.x64  =107124
+ulMaxDebugSessions.x64=107128
+bFUSEnabled.x64       =10712C
+
+[10.0.19041.1081-SLInit]
 bInitialized.x64      =107108
 bServerSku.x64        =10710C
 lMaxUserSessions.x64  =107110
@@ -7664,6 +7746,26 @@ ulMaxDebugSessions.x64=11FEF0
 bFUSEnabled.x64       =11FEF4
 
 [10.0.21390.1-SLInit]
+bInitialized.x64      =11FECC
+bServerSku.x64        =11FED0
+lMaxUserSessions.x64  =11FED4
+bAppServerAllowed.x64 =11FEDC
+bRemoteConnAllowed.x64=11FEE4
+bMultimonAllowed.x64  =11FEE8
+ulMaxDebugSessions.x64=11FEF0
+bFUSEnabled.x64       =11FEF4
+
+[10.0.21996.1-SLInit]
+bInitialized.x64      =11FECC
+bServerSku.x64        =11FED0
+lMaxUserSessions.x64  =11FED4
+bAppServerAllowed.x64 =11FEDC
+bRemoteConnAllowed.x64=11FEE4
+bMultimonAllowed.x64  =11FEE8
+ulMaxDebugSessions.x64=11FEF0
+bFUSEnabled.x64       =11FEF4
+
+[10.0.22000.1-SLInit]
 bInitialized.x64      =11FECC
 bServerSku.x64        =11FED0
 lMaxUserSessions.x64  =11FED4
